# GitShrub

./: AGENTS.md  Cargo.toml  LICENSE  README.md  gitshrub.desktop  install.sh
docs/: architecture.md  todo.md
src/: app.rs  git.rs  graph.rs  main.rs
src/ui/: commit_info.rs  commit_list.rs  diff_view.rs  file_list.rs  mod.rs
