[package]
name = "gitshrub"
version = "0.1.0"
edition = "2024"
description = "GitShrub - A lightweight Git history viewer"
license = "MIT"

[dependencies]
eframe = { version = "0.33", default-features = true }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 2
lto = "thin"
strip = true